refactor(connect api): standardize models
